# xyz-to-hex

./: CMakeLists.txt  README.md  go.mod  main.go
01_dda_line_drawing/src/: main.cpp
02_bresenham_line/src/: main.cpp
03_midpoint_circle/src/: main.cpp
04_midpoint_ellipse/src/: main.cpp
05_boundary_fill/src/: main.cpp
06_2d_transform/src/: main.cpp
07_2d_translation/src/: main.cpp
08_2d_rotation/src/: main.cpp
09_2d_scaling/src/: main.cpp
10_2d_shearing/src/: main.cpp
11_2d_reflection/src/: main.cpp
12_window_view_port_mapping/src/: main.cpp
13_cohen_sutherland_line_clipping/src/: main.cpp
14_sutherland_hodgeman_polygon_clipping/src/: main.cpp
15_Liang_Barsky_clipping/src/: main.cpp
16_scanline_polygon_filling/src/: main.cpp
17_3d_transform_pipeline/src/: main.cpp
18_rotating_cube/src/: main.cpp
src/: main.cpp
